# aigent

./: DESIGN.md  README.md  pyproject.toml
src/: main.py
src/agent/: core.py  tools.py  websearchAgent.py
src/logic/: scoring.py
src/services/: aviation_api.py
